Creating protobuf template file dynamically

--- a/dev/example.ipynb
+++ b/dev/example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Station_Name string False\n",
+      "Measurement_Timestamp datetime64[ns] True\n",
+      "Air_Temperature Float64 False\n",
+      "Wet_Bulb_Temperature Float64 False\n",
+      "Humidity Int64 False\n",
+      "Rain_Intensity Float64 False\n",
+      "Interval_Rain Float64 False\n",
+      "Total_Rain Float64 False\n",
+      "Precipitation_Type Int64 False\n",
+      "Wind_Direction Int64 False\n",
+      "Wind_Speed Float64 False\n",
+      "Maximum_Wind_Speed Float64 False\n",
+      "Barometric_Pressure Float64 False\n",
+      "Solar_Radiation Int64 False\n",
+      "Heading Int64 False\n",
+      "Battery_Life Float64 False\n",
+      "Measurement_Timestamp_Label string False\n",
+      "Measurement_ID string False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "for n, t in df.dtypes.to_dict().items():\n",
+    "    print(n, t, t == \"datetime64[ns]\")\n",
+    "    a.append(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +465,7 @@
        "[59144 rows x 18 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -18472,7 +18509,7 @@
        "  ...}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18483,7 +18520,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_proto_template(package_name: str, df: pd.DataFrame):\n",
+    "    d = []\n",
+    "    for name, dtype in df.dtypes.to_dict().items():\n",
+    "        match dtype:\n",
+    "            case \"string\":\n",
+    "                d.append([\"string\", name])\n",
+    "            case \"Float64\":\n",
+    "                d.append([\"float\", name])\n",
+    "            case \"Int64\":\n",
+    "                d.append([\"int64\", name])\n",
+    "            case \"datetime64[ns]\":\n",
+    "                d.append([\"google.protobuf.Timestamp\", name])\n",
+    "    \n",
+    "    template = f'\\\n",
+    "syntax = \"proto3\";\\n\\\n",
+    "import \"google/protobuf/timestamp.proto\";\\n\\n\\\n",
+    "package {package_name};\\n\\\n",
+    "message {package_name}_message {{\\n\\\n",
+    "'\n",
+    "    template += \"\\n\".join(f\"    {e[0]} {e[1]} = {d.index(e) + 1};\" for e in d)\n",
+    "    template += \"\\n}\"\n",
+    "    return template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18527,30 +18594,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'\"\\x82\\x03\\n\\tDataFrame\\x12\\x10\\n\\x0cStation_Name(\\t\\x12\\x19\\n\\x15Measurement_Timestamp(\\t\\x12\\x13\\n\\x0fAir_Temperature(\\t\\x12\\x18\\n\\x14Wet_Bulb_Temperature(\\t\\x12\\x0c\\n\\x08Humidity(\\t\\x12\\x12\\n\\x0eRain_Intensity(\\t\\x12\\x11\\n\\rInterval_Rain(\\t\\x12\\x0e\\n\\nTotal_Rain(\\t\\x12\\x16\\n\\x12Precipitation_Type(\\t\\x12\\x12\\n\\x0eWind_Direction(\\t\\x12\\x0e\\n\\nWind_Speed(\\t\\x12\\x16\\n\\x12Maximum_Wind_Speed(\\t\\x12\\x17\\n\\x13Barometric_Pressure(\\t\\x12\\x13\\n\\x0fSolar_Radiation(\\t\\x12\\x0b\\n\\x07Heading(\\t\\x12\\x10\\n\\x0cBattery_Life(\\t\\x12\\x1f\\n\\x1bMeasurement_Timestamp_Label(\\t\\x12\\x12\\n\\x0eMeasurement_ID(\\t'\n"
+      "syntax = \"proto3\";\n",
+      "import \"google/protobuf/timestamp.proto\";\n",
+      "\n",
+      "package m_beach2;\n",
+      "message m_beach2_message {\n",
+      "    string Station_Name = 1;\n",
+      "    google.protobuf.Timestamp Measurement_Timestamp = 2;\n",
+      "    float Air_Temperature = 3;\n",
+      "    float Wet_Bulb_Temperature = 4;\n",
+      "    int64 Humidity = 5;\n",
+      "    float Rain_Intensity = 6;\n",
+      "    float Interval_Rain = 7;\n",
+      "    float Total_Rain = 8;\n",
+      "    int64 Precipitation_Type = 9;\n",
+      "    int64 Wind_Direction = 10;\n",
+      "    float Wind_Speed = 11;\n",
+      "    float Maximum_Wind_Speed = 12;\n",
+      "    float Barometric_Pressure = 13;\n",
+      "    int64 Solar_Radiation = 14;\n",
+      "    int64 Heading = 15;\n",
+      "    float Battery_Life = 16;\n",
+      "    string Measurement_Timestamp_Label = 17;\n",
+      "    string Measurement_ID = 18;\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "protobuf_template = create_protobuf_template(df)\n",
+    "protobuf_template = create_proto_template(\"m_beach2\", df)\n",
     "print(protobuf_template)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write the byte string to a file.\n",
-    "with open(path.join(PROTOS_FOLDER_ABS_PATH, \"protobuf_example.proto\"), \"wb\") as f:\n",
+    "with open(path.join(PROTOS_FOLDER_ABS_PATH, \"protobuf_example.proto\"), \"w\") as f:\n",
     "    f.write(protobuf_template)"
    ]
   },
@@ -18563,16 +18653,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<string>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<string>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<string>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<string>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "C:\\Temp\\ipykernel_13668\\3829055611.py:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "  compile_proto_command = f\"..\\{PROTOC_EXE} --python_out=..\\{M_BEACH_PROTO}\"\n",
+      "C:\\Temp\\ipykernel_13668\\3829055611.py:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "  compile_proto_command = f\"..\\{PROTOC_EXE} --python_out=..\\{M_BEACH_PROTO}\"\n",
+      "<string>:5: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<string>:5: SyntaxWarning: invalid escape sequence '\\{'\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18580,10 +18690,11 @@
    "source": [
     "import os\n",
     "\n",
-    "M_BEACH_PROTO = path.join(PROTOS_FOLDER, \"m_beach.proto\")\n",
+    "M_BEACH_PROTO = path.join(PROTOS_FOLDER, \"protobuf_example.proto\")\n",
     "\n",
-    "compile_proto_command = f\"{PROTOC_EXE} --python_out=. {M_BEACH_PROTO}\"\n",
-    "os.system(compile_proto_command)"
+    "compile_proto_command = f\"..\\{PROTOC_EXE} --python_out=. \\{M_BEACH_PROTO}\"\n",
+    "os.system(compile_proto_command)\n",
+    "# compile_proto_command"
    ]
   },
   {
@@ -18595,7 +18706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18608,29 +18719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Station_Name: \"Oak Street Weather Station\"\n",
-      "Measurement_Timestamp {\n",
-      "  seconds: 1432306800\n",
-      "}\n",
-      "Wet_Bulb_Temperature: 7\n",
-      "Humidity: 55\n",
-      "Total_Rain: 1.4\n",
-      "Wind_Direction: 63\n",
-      "Wind_Speed: 1.9\n",
-      "Maximum_Wind_Speed: 2.8\n",
-      "Solar_Radiation: 780\n",
-      "Heading: 322\n",
-      "Battery_Life: 12\n",
-      "Measurement_Timestamp_Label: \"05/22/2015 3:00 PM\"\n",
-      "Measurement_ID: \"OakStreetWeatherStation201505221500\"\n",
-      "\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'protos'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\MANDR\\Desktop\\py\\gdepc\\dev\\example.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/MANDR/Desktop/py/gdepc/dev/example.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mprotos\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mm_beach_pb2\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mm_beach_pb2\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MANDR/Desktop/py/gdepc/dev/example.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m m_beach_message \u001b[39m=\u001b[39m m_beach_pb2\u001b[39m.\u001b[39mm_beach_message() \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MANDR/Desktop/py/gdepc/dev/example.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m field, value \u001b[39min\u001b[39;00m df\u001b[39m.\u001b[39mto_dict(orient\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrecords\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mitems():\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'protos'"
      ]
     }
    ],
@@ -18664,7 +18764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18697,7 +18797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18745,7 +18845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18774,7 +18874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18843,7 +18943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18860,7 +18960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18905,7 +19005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18915,7 +19015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18950,7 +19050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18990,7 +19090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19021,7 +19121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19036,7 +19136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19056,7 +19156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19076,7 +19176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19107,7 +19207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19116,7 +19216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
