code style and rework

--- a/libs/PyComP/experiments1.ipynb
+++ b/libs/PyComP/experiments1.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ANS import *\n",
-    "from arithmetic_coding import *\n",
-    "from huffman import *\n",
-    "from sANS import *\n",
+    "from .ANS import *\n",
+    "from .arithmetic_coding import *\n",
+    "from .huffman import *\n",
+    "from .sANS import *\n",
     "import time\n",
-    "from utils.utils import get_symbols\n",
-    "from core.data import *"
+    "from .utils.utils import get_symbols\n",
+    "from .core.data import *"
    ]
   },
   {
