moved loading and normilizing datasets under modeling

--- a/example.ipynb
+++ b/example.ipynb
@@ -84,12 +84,7 @@
     "def normilize_datasets(dfs: dict[str: pd.DataFrame]) -> None:\n",
     "    normilize_datasets_columns_names(dfs)\n",
     "    normilize_datasets_dtypes\n",
-    "    normilize_datasets_timestamps(dfs)\n",
-    "    \n",
-    "\n",
-    "# dfs = {}\n",
-    "# load_datasets(dfs)\n",
-    "# normilize_datasets(dfs)"
+    "    normilize_datasets_timestamps(dfs)"
    ]
   },
   {
@@ -946,6 +941,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dfs = {}\n",
+    "# load_datasets(dfs)\n",
+    "# normilize_datasets(dfs)\n",
     "# packages = get_packages(dfs)\n",
     "\n",
     "# with open(\"static\\\\pickles\\\\packages.pickle\", 'wb') as f:\n",
