--- a/example.ipynb
+++ b/example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,7 @@
     "from config import *\n",
     "from sys import getsizeof\n",
     "\n",
-    "import os\n",
-    "import sys\n",
-    "import re\n",
-    "import json\n",
-    "import pickle\n",
-    "import datetime\n",
-    "import importlib\n",
+    "import os, sys, re, time, json, pickle, datetime, importlib\n",
     "import pandas as pd\n",
     "import dateutil.parser as dp"
    ]
