--- a/example.ipynb
+++ b/example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,22 +898,22 @@
     "\n",
     "    # Creating proto templates\n",
     "    print(f\" - creating protobuf templates\") \n",
-    "    for df in dfs:\n",
-    "        packages[df][\"protobuf_template\"] = create_proto_template(packages[df][\"package_name\"], dfs[df])\n",
+    "    for package in packages:\n",
+    "        packages[package][\"protobuf_template\"] = create_proto_template(packages[package][\"package_name\"], dfs[package])\n",
     "\n",
     "    # Compiling proto templates\n",
     "    print(f\" - compiling protobuf templates\") \n",
-    "    for df in dfs:\n",
+    "    for package in packages:\n",
     "        packages[df][\"proto_filename\"] = packages[df][\"package_name\"] + \".proto\"\n",
-    "        with open(os.path.join(PROTOS_FOLDER_ABS_PATH, packages[df][\"proto_filename\"]), \"w\") as f:\n",
-    "            f.write(packages[df][\"protobuf_template\"])\n",
-    "        compile_proto(packages[df][\"proto_filename\"])\n",
+    "        with open(os.path.join(PROTOS_FOLDER_ABS_PATH, packages[package][\"proto_filename\"]), \"w\") as f:\n",
+    "            f.write(packages[package][\"protobuf_template\"])\n",
+    "        compile_proto(packages[package][\"proto_filename\"])\n",
     "\n",
     "\n",
     "    # Converting datasets from pd.DataFrame to dict for easier messages filling (~40 secs)\n",
     "    print(f\" - copying datasets to dict in packages\") \n",
-    "    for df in dfs:\n",
-    "        packages[df][\"messages\"] = dfs[df].to_dict(orient=\"records\")\n",
+    "    for package in packages:\n",
+    "        packages[package][\"messages\"] = dfs[package].to_dict(orient=\"records\")\n",
     "    \n",
     "    # Serializing messages with protobuf (filling and serializing messages) (might take a while (~2 min))\n",
     "    print(f\" - serializing messages with protobuf (might take  while)\") \n",
@@ -1040,17 +1040,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compress_packages(packages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mass evaluation funcitons\n",
-    "# def get_sizes()"
+    "# compress_packages(packages) # займет оч много времени и памяти (NOTE: снимать показания во время сжатия, чтобы не занимать хотя бы память)"
    ]
   },
   {
@@ -1202,6 +1192,8 @@
     }
    ],
    "source": [
+    "# Mass evaluation funcitons\n",
+    "\n",
     "def get_sizes(packages):\n",
     "    sizes = {}\n",
     "    for package in packages:\n",
@@ -1224,53 +1216,6 @@
     "    return sizes\n",
     "\n",
     "sizes = get_sizes(packages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'x\\x9c=\\x8eA\\x0e\\xc20\\x0c\\x04\\xff\\x92s\\xb0b;^\\xc7\\xfd\\x0c\\x82\\n\\x8e-B\\x82\\x0b\\xe2\\xef4\\r\\xea\\xc5\\xd2\\x8e5k\\x7f\\xd2\\xe5\\xbc\\xac\\x92&!/\\xc8[z\\xdd\\x1fibvwb\\x8dN\\xaes\\x9aN\\x85\\nk1n\\xad\\x01\\x1e!\\x9c\\xd32Tf2\\xediW!*T\\x07\\xe8&\\x93\\xb0B\\xd9\\xbcEu\\xf5\\x9c\\xdeCs\\x12\\xf40\\x0e\\xb6\\xc6B\\xc0N\\xbaV\\xc8\\x10`\\xd3V\\xf7i\\xbdo^\\x9f\\xb7\\xff\\xcd\\xed9\\x1chT(\\xabQ\\x00\\xf5\\xe0\\xa3\\xa8\\x08l[z\\x14\\xaf\\xb5\\xc2\\xbf?lK>\\x11'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "packages[\"ASCCDCV\"][\"package_messages_json_compressed\"][\"zlib\"][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sizes[\"ASCCDCV\"][\"json_compressed\"][0]"
    ]
   },
   {
@@ -1533,121 +1478,12 @@
     }
    ],
    "source": [
+    "# среднее по размеру для каждого датасета/формата/алгоритма сжатия\n",
     "for package in sizes:\n",
     "    print(f\"{package}\")\n",
     "    for msg_type in sizes[package]:\n",
     "        print(f\" {msg_type} average: {sum(sizes[package][msg_type])/len(sizes[package][msg_type])}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[b'{\"a_no2\":2.706,\"a_ufp\":11777.139,\"a_bc\":-0.0130518886679921,\"n_no2\":11.53,\"n_ufp\":6232.453,\"n_bc\":1.21363157894737,\"v_no2\":7.26,\"v_ufp\":18812.666,\"v_bc\":0.569615384615385,\"n_core_no2\":1.136,\"n_core_ufp\":13135.9664,\"n_core_bc\":0.0265131790744467}',\n",
-       " b'{\"a_no2\":2.687,\"a_ufp\":16666.338,\"a_bc\":-0.0130518886679921,\"n_no2\":9.78,\"n_ufp\":3412.097005,\"n_bc\":0.732852941176471,\"v_no2\":7.587,\"v_ufp\":8878.1331,\"v_bc\":0.569615384615385,\"n_core_no2\":0.911,\"n_core_ufp\":12304.3455,\"n_core_bc\":0.0265131790744467}']"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[message for message in packages[package][\"package_messages_json\"][0:2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1263\n",
-      "1357\n",
-      "1799\n",
-      "1355\n",
-      "1246\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bitsize(packages[\"ARGAZAL\"][\"package_messages_proto_compressed\"][\"zlib\"][0]))\n",
-    "print(bitsize(packages[\"ARGAZAL\"][\"package_messages_proto_compressed\"][\"gzip\"][0]))\n",
-    "print(bitsize(packages[\"ARGAZAL\"][\"package_messages_proto_compressed\"][\"bz2\"][0]))\n",
-    "print(bitsize(packages[\"ARGAZAL\"][\"package_messages_proto_compressed\"][\"lz4\"][0]))\n",
-    "print(bitsize(packages[\"ARGAZAL\"][\"package_messages_proto_compressed\"][\"zstd\"][0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['zlib', 'gzip', 'bz2', 'lz4', 'zstd']"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i for i in packages[\"ARGAZAL\"][\"package_messages_json_compressed\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1172\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bitsize(packages[\"ARGAZAL\"][\"package_messages_proto\"][0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.651473040578099, 1.5349829351535835, 0.9406099518459069, 1.0631399317406143)"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1.5*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
